tests/type/assign_bool_to_int.rev
var a: int = true // error: trying to assign value of type 'bool' to variable of type 'int'